import "Protocol/Const.proto";
import "Protocol/Reward.proto";
import "Protocol/Consume.proto";
import "Protocol/Monster.proto";

option java_package = "com.hawk.game.protocol";

// struct-------------------------------------------------------

message HSAssist
{
	required int32 playerId = 1;
	required int32 playerLevel = 2;
	required int32 playerPower = 3;
	required string playerName = 4;
	required bool isFriend = 5;
	required HSMonster monster = 6;
}

message HSBattle
{
	optional BattleType type = 1 [default = NORMAL];
	repeated string monsterCfgId = 2;
	optional HSRewardInfo dropReward = 3;
}

// protocol-----------------------------------------------------

// INSTANCE_ASSIST_C
message HSInstanceAssist
{

}

// INSTANCE_ASSIST_S
message HSInstanceAssistRet
{
	repeated HSAssist assist = 1;
}

// INSTANCE_ENTER_C
message HSInstanceEnter
{
	required string cfgId = 1;
}

// INSTANCE_ENTER_S
message HSInstanceEnterRet
{
	required int32 status = 1;
	required string cfgId = 2;
	repeated HSBattle battle = 3;
	optional int32 fatigueChange = 4;
}

// INSTANCE_SETTLE_C
message HSInstanceSettle
{
	repeated int32 passBattleIndex = 1;
	repeated int32 passBoxIndex = 2;
}

// INSTANCE_SETTLE_S
message HSInstanceSettleRet
{
	required int32 status = 1;
	optional int32 starCount = 2 [default = 0];
	optional HSRewardInfo completeReward = 3;
	repeated RewardItem cardReward = 4;
}

// INSTANCE_OPEN_CARD_C
message HSInstanceOpenCard
{
	required int32 openCount = 1;
}

// INSTANCE_OPEN_CARD_S
message HSInstanceOpenCardRet
{
	required int32 status = 1;
}